# pkm_pwrfe

ai-agent-core/: .env.example  .gitignore  README.md  agent.py  background_worker.py  pyproject.toml  review_cron.py  server.py  telegram_bot.py  x.db-shm  x.db-wal
ai-agent-core/config/: index.yaml  loader.py  models.py  routing.yaml  rules.yaml  tag_rules.yaml
ai-agent-core/harness/: daemon.py  evaluator.py  factory.py
ai-agent-core/mcp/: mcp_client.py
ai-agent-core/memories/: short_term.py  url_registry.py
ai-agent-core/rag/: fts_index.py  graph_index.py  tokenizer.py
ai-agent-core/scripts/: __init__.py  build_similarity_edges.py  offline_classifier.py  pipeline_worker.py  web_scraper.py
ai-agent-core/skills/: base.py  chat.py  fetch_web_to_md.py  file_ops.py  find_ops.py  grep_ops.py  math_logic.py  pipeline_ops.py  react.py  reflect.py  review.py  tree_ops.py
ai-agent-core/tests/: test_agent.py  test_cache_guard.py  test_chat_cache.py  test_config.py  test_e2e.py  test_evaluator.py  test_factory.py  test_fetch_web_to_md.py  test_file_ops.py  test_graph_index.py  test_knowledge_server.py  test_long_term.py  test_math_logic.py  test_mcp_client.py  test_message_types.py  test_p0_multiturn.py  test_p0_url_dedup.py  test_p1_pipeline_similarity_op.py  test_p1_similarity_edges.py  test_phase4_graph_edges.py  test_phase5_review.py  test_phase6_reflect.py  test_phase7_chunks.py  test_phase7_offline_classifier.py  test_pipeline_classify.py  test_pipeline_clean.py  test_pipeline_fts5.py  test_pipeline_index_yaml.py  test_pipeline_worker_e2e.py  test_react_skill.py  (+9 more)
(+617 files in other folders)
