[project]
name = "ai-agent-core"
version = "0.1.0"
description = "Token-efficient Agentic Core with deterministic-first routing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "sqlite-vec>=0.1.6",
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
    "watchdog>=4.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*", "rag*", "skills*", "mcp*", "memories*", "tests*", "config*", "scripts*"]
